Add Github Authentication
