# controllers/tbrController.js
@@ -3,16 +3,20 @@ const ObjectId = require('mongodb').ObjectId;
 
 // Get all tbr books
 async function getAllTbrBooks(req, res) {
-    //#swagger.tags=['TBRBooks']
-    try {
-        const result = await mongodb.getDatabase().db().collection('books_tbr').find();
-        const books = await result.toArray();
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(books);
-    } catch (error) {
-        console.error('Error fetching books:', error);
-        res.status(500).json({ message: 'Failed to fetch books' });
-    }
+	//#swagger.tags=['TBRBooks']
+	try {
+		const result = await mongodb
+			.getDatabase()
+			.db()
+			.collection('books_tbr')
+			.find();
+		const books = await result.toArray();
+		res.setHeader('Content-Type', 'application/json');
+		res.status(200).json(books);
+	} catch (error) {
+		console.error('Error fetching books:', error);
+		res.status(500).json({ message: 'Failed to fetch books' });
+	}
 }
 
 // Get tbr book by ID
@@ -90,7 +94,6 @@ async function deleteTbrBook(req, res) {
 		.deleteOne({ _id: bookID });
 	res.status(200).json('TBR Book Removed');
 }
-
 
 module.exports = {
 	getAllTbrBooks,
